# cs4575-project2

./: .gitignore  README.md  pyproject.toml  requirements.txt
cs4575_project2/: Dockerfile  add_dataset.py  energi_custom.py  main.py  main2.py  run_images.ps1  timemanager.py  train_model.py  utils.py  visualize.py  workload.py
cs4575_project2/analysis/: results_extraction.py  results_visualisation.py  test.py  violin_plot.py
cs4575_project2/dockerfiles/: .python-version  README.md  bash.dockerfile  build_images.ps1  build_images.sh  build_tensorrt.bat  docker_docs.md  inference_results.txt  llm.py  mlc.Dockerfile  mlc.yml  mlc_library.py  ollama.Dockerfile  ollama_library.py  pytorch_cuda.Dockerfile  pytorch_debian12.Dockerfile  pytorch_latest.Dockerfile  pytorch_ubuntu20_04.Dockerfile  requirements_mlc.txt  run_bash.sh  run_images.ps1  run_images.py  run_images2.py  run_images_api.py  run_inference.py  run_tensorrt.bat  run_tgi.sh  t1.py  t2.py  t3.py  t4.py  t5.py  tensorrt.Dockerfile  tensorrt_library.py  test.Dockerfile  test.ps1  test.py  test2.Dockerfile  tgi.Dockerfile  tgi_library.py  (+4 more)
cs4575_project2/dockerfiles/ollama/: ollama.Dockerfile  ollama_library.py  start.sh
cs4575_project2/dockerfiles/results/: results.csv  token_sec_mlc.csv  token_sec_vllm.csv
cs4575_project2/dockerfiles/volume/: Modelfile  build_images.ps1  constants.py  mlc_library.py  ollama_library.py  run_inference.py  tensorrt_library.py  test.py  utils.py  (+2 more)
cs4575_project2/results/: result_1.csv
cs4575_project2/scripts/: loadDataset.ipynb  prompt.py
cs4575_project2/utils/: prompt.py
(+300 files in other folders)
